--- a/middleware/ansible/11-zabbix-eda/cfn/managed-nodes.yaml
+++ b/middleware/ansible/11-zabbix-eda/cfn/managed-nodes.yaml
@@ -11,16 +11,19 @@ Parameters:
     AllowedValues: [t3.small, t3.medium]
     Description: Zabbix server needs more resources
 
+  PublicKey:
+    Type: String
+    Description: SSH public key for ansible user (from ~/.ssh/id_ed25519.pub)
+
   LatestAmiId:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
     Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64
 
 Resources:
-  # IAM Role for Zabbix Nodes
   ZabbixNodeRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: ansible-zabbix-node-role
+      RoleName: !Sub ansible-zabbix-role-${AWS::StackName}
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -30,16 +33,6 @@ Resources:
             Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
-      Policies:
-        - PolicyName: SSMParameterAccess
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - ssm:GetParameter
-                  - ssm:GetParameters
-                Resource: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/ansible-course/*'
 
   ZabbixNodeInstanceProfile:
     Type: AWS::IAM::InstanceProfile
@@ -47,29 +40,24 @@ Resources:
       Roles:
         - !Ref ZabbixNodeRole
 
-  # Security Group for Zabbix
   ZabbixSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Security group for Zabbix Environment
       VpcId: !ImportValue ansible-course-vpc-id
       SecurityGroupIngress:
-        # SSH from Control Node
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
           SourceSecurityGroupId: !ImportValue ansible-course-sg-id
-        # Zabbix Web UI
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
           SourceSecurityGroupId: !ImportValue ansible-course-sg-id
-        # Zabbix Server (agent communication)
         - IpProtocol: tcp
           FromPort: 10051
           ToPort: 10051
           CidrIp: 10.0.0.0/16
-        # Zabbix Agent
         - IpProtocol: tcp
           FromPort: 10050
           ToPort: 10050
@@ -79,9 +67,8 @@ Resources:
           CidrIp: 0.0.0.0/0
       Tags:
         - Key: Name
-          Value: ansible-zabbix-sg
+          Value: !Sub ${AWS::StackName}-sg
 
-  # Zabbix Server
   ZabbixServer:
     Type: AWS::EC2::Instance
     Properties:
@@ -105,39 +92,17 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash
           set -e
-
-          # Set hostname
           hostnamectl set-hostname zabbix-server
-          echo "zabbix-server" > /etc/hostname
-
-          # Create ansible user
           useradd -m ansible
           echo 'ansible ALL=(ALL) NOPASSWD:ALL' > /etc/sudoers.d/ansible
           chmod 440 /etc/sudoers.d/ansible
-
-          # Get public key from Control Node
-          for i in {1..30}; do
-            PUBLIC_KEY=$(aws ssm get-parameter \
-              --name "/ansible-course/control-node-pubkey" \
-              --query 'Parameter.Value' \
-              --output text \
-              --region ${AWS::Region} 2>/dev/null) && break
-            sleep 10
-          done
-
-          # Setup SSH
           mkdir -p /home/ansible/.ssh
-          echo "$PUBLIC_KEY" > /home/ansible/.ssh/authorized_keys
+          echo "${PublicKey}" > /home/ansible/.ssh/authorized_keys
           chmod 700 /home/ansible/.ssh
           chmod 600 /home/ansible/.ssh/authorized_keys
           chown -R ansible:ansible /home/ansible/.ssh
-
-          # Install dependencies
           dnf install -y python3 python3-pip
 
-          echo "Zabbix Server ready - Install via Ansible playbook" > /home/ansible/setup-status.txt
-
-  # Target Node 1 (to be monitored)
   TargetNode1:
     Type: AWS::EC2::Instance
     Properties:
@@ -156,39 +121,18 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash
           set -e
-
-          # Set hostname
           hostnamectl set-hostname target1-web
-          echo "target1-web" > /etc/hostname
-
-          # Create ansible user
           useradd -m ansible
           echo 'ansible ALL=(ALL) NOPASSWD:ALL' > /etc/sudoers.d/ansible
           chmod 440 /etc/sudoers.d/ansible
-
-          # Get public key
-          for i in {1..30}; do
-            PUBLIC_KEY=$(aws ssm get-parameter \
-              --name "/ansible-course/control-node-pubkey" \
-              --query 'Parameter.Value' \
-              --output text \
-              --region ${AWS::Region} 2>/dev/null) && break
-            sleep 10
-          done
-
-          # Setup SSH
           mkdir -p /home/ansible/.ssh
-          echo "$PUBLIC_KEY" > /home/ansible/.ssh/authorized_keys
+          echo "${PublicKey}" > /home/ansible/.ssh/authorized_keys
           chmod 700 /home/ansible/.ssh
           chmod 600 /home/ansible/.ssh/authorized_keys
           chown -R ansible:ansible /home/ansible/.ssh
-
           dnf install -y python3 httpd
           systemctl enable httpd
 
-          echo "Target 1 (webserver) ready" > /home/ansible/setup-status.txt
-
-  # Target Node 2 (to be monitored)
   TargetNode2:
     Type: AWS::EC2::Instance
     Properties:
@@ -207,50 +151,18 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash
           set -e
-
-          # Set hostname
           hostnamectl set-hostname target2-app
-          echo "target2-app" > /etc/hostname
-
-          # Create ansible user
           useradd -m ansible
           echo 'ansible ALL=(ALL) NOPASSWD:ALL' > /etc/sudoers.d/ansible
           chmod 440 /etc/sudoers.d/ansible
-
-          # Get public key
-          for i in {1..30}; do
-            PUBLIC_KEY=$(aws ssm get-parameter \
-              --name "/ansible-course/control-node-pubkey" \
-              --query 'Parameter.Value' \
-              --output text \
-              --region ${AWS::Region} 2>/dev/null) && break
-            sleep 10
-          done
-
-          # Setup SSH
           mkdir -p /home/ansible/.ssh
-          echo "$PUBLIC_KEY" > /home/ansible/.ssh/authorized_keys
+          echo "${PublicKey}" > /home/ansible/.ssh/authorized_keys
           chmod 700 /home/ansible/.ssh
           chmod 600 /home/ansible/.ssh/authorized_keys
           chown -R ansible:ansible /home/ansible/.ssh
-
           dnf install -y python3
 
-          echo "Target 2 (appserver) ready" > /home/ansible/setup-status.txt
-
 Outputs:
-  ZabbixServerInstanceId:
-    Description: Zabbix Server Instance ID
-    Value: !Ref ZabbixServer
-
-  Target1InstanceId:
-    Description: Target Node 1 Instance ID
-    Value: !Ref TargetNode1
-
-  Target2InstanceId:
-    Description: Target Node 2 Instance ID
-    Value: !Ref TargetNode2
-
   ZabbixServerPrivateIp:
     Description: Zabbix Server Private IP
     Value: !GetAtt ZabbixServer.PrivateIp
@@ -262,18 +174,3 @@ Outputs:
   Target2PrivateIp:
     Description: Target 2 Private IP
     Value: !GetAtt TargetNode2.PrivateIp
-
-  ZabbixInfo:
-    Description: Zabbix environment info
-    Value: |
-      === Zabbix + EDA Environment ===
-
-      Zabbix Server: For monitoring (install via playbook)
-      Target 1: Web server to monitor
-      Target 2: App server to monitor
-
-      Teaching objectives:
-      - Install Zabbix via Ansible
-      - Configure Zabbix agents
-      - Create triggers
-      - Event-Driven Ansible auto-remediation
