--- a/middleware/ansible/02-inventory/cfn/managed-nodes.yaml
+++ b/middleware/ansible/02-inventory/cfn/managed-nodes.yaml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: |
   Ansible Course - Lesson 02 Managed Nodes
-  2 nodes (webserver + dbserver) with auto SSH configuration
+  2 nodes (webserver + dbserver) with SSH key from parameter
 
 Parameters:
   InstanceType:
@@ -10,12 +10,16 @@ Parameters:
     AllowedValues: [t3.micro, t3.small]
     Description: Managed node instance type
 
+  PublicKey:
+    Type: String
+    Description: SSH public key for ansible user (from Control Node ~/.ssh/id_ed25519.pub)
+
   LatestAmiId:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
     Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64
 
 Resources:
-  # IAM Role for Managed Nodes
+  # IAM Role for Managed Nodes (SSM only for Session Manager)
   ManagedNodeRole:
     Type: AWS::IAM::Role
     Properties:
@@ -29,15 +33,6 @@ Resources:
             Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
-      Policies:
-        - PolicyName: GetSSHKey
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - ssm:GetParameter
-                Resource: !Sub arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/ansible-course/*
 
   ManagedNodeInstanceProfile:
     Type: AWS::IAM::InstanceProfile
@@ -98,17 +93,8 @@ Resources:
           echo 'ansible ALL=(ALL) NOPASSWD:ALL' > /etc/sudoers.d/ansible
           chmod 440 /etc/sudoers.d/ansible
 
-          for i in {1..30}; do
-            PUBLIC_KEY=$(aws ssm get-parameter \
-              --name "/ansible-course/control-node-pubkey" \
-              --query 'Parameter.Value' \
-              --output text \
-              --region ${AWS::Region} 2>/dev/null) && break
-            sleep 10
-          done
-
           mkdir -p /home/ansible/.ssh
-          echo "$PUBLIC_KEY" > /home/ansible/.ssh/authorized_keys
+          echo "${PublicKey}" > /home/ansible/.ssh/authorized_keys
           chmod 700 /home/ansible/.ssh
           chmod 600 /home/ansible/.ssh/authorized_keys
           chown -R ansible:ansible /home/ansible/.ssh
@@ -142,17 +128,8 @@ Resources:
           echo 'ansible ALL=(ALL) NOPASSWD:ALL' > /etc/sudoers.d/ansible
           chmod 440 /etc/sudoers.d/ansible
 
-          for i in {1..30}; do
-            PUBLIC_KEY=$(aws ssm get-parameter \
-              --name "/ansible-course/control-node-pubkey" \
-              --query 'Parameter.Value' \
-              --output text \
-              --region ${AWS::Region} 2>/dev/null) && break
-            sleep 10
-          done
-
           mkdir -p /home/ansible/.ssh
-          echo "$PUBLIC_KEY" > /home/ansible/.ssh/authorized_keys
+          echo "${PublicKey}" > /home/ansible/.ssh/authorized_keys
           chmod 700 /home/ansible/.ssh
           chmod 600 /home/ansible/.ssh/authorized_keys
           chown -R ansible:ansible /home/ansible/.ssh
